fixing overflow

--- a/Portfolio.Me/Portfolio.Me/portfolio-v2/src/app/projects/projects.component.scss
+++ b/Portfolio.Me/Portfolio.Me/portfolio-v2/src/app/projects/projects.component.scss
@@ -239,6 +239,7 @@
             border: none;
             position: relative;
             z-index: 10;
+            overflow: hidden;
             &:hover,
             &.active {
                 .grid-item-text-container-box {
